pages/news/detail.module.scss
@import 'styles/variable.module.scss';

.container {
  width: 100%;
  display: flex;
  justify-content: center;

  // padding-top: 80px;
  background: linear-gradient(90deg, #ffffff 68%, #d5d7ce 32%);
  overflow: hidden;
  min-height: calc(100vh - 177px);
}
.m_container {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding-top: 80px;
  // background: #e4e5de;
  min-height: calc(100vh - 177px);
}
.title {
  color: #818e8e;
  font-family: Montserrat;
  font-size: 24px;
  font-weight: bold;
  letter-spacing: -0.38px;
  line-height: 29px;
}
.m_title {
  color: #818e8e;
  font-family: Montserrat;
  font-size: 14px;
  font-weight: bold;
  letter-spacing: -0.22px;
  line-height: 18px;
}
.date {
  color: #818e8e;
  font-family: Montserrat;
  font-size: 18px;
  letter-spacing: -0.29px;
  line-height: 20px;
}
.m_date {
  color: #bdb8b8;
  font-family: Montserrat;
  font-size: 10px;
  letter-spacing: -0.16px;
  line-height: 20px;
}
.expand {
  max-height: 100% !important;
}
.text {
  color: #818e8e;
  font-family: Montserrat;
  font-size: 14px;
  letter-spacing: 0.62px;
  line-height: 28px;
  text-align: justify;
  overflow: hidden;
  padding-bottom: 50px;
  max-height: 440px;
}
.m_text {
  color: #818e8e;
  font-family: Montserrat;
  font-size: 12px;
  letter-spacing: 0.53px;
  line-height: 26px;
  text-align: justify;
}
.textContainer {
  border: 1px solid #71918e;
  background-color: #ffffff;
}

